new scripts, tests etc added